# power_terminal

./: .gitignore  LICENSE  README.md  setup.cfg
src/: test.py
src/power_terminal/: __init__.py
tests/: test.py
