[metadata]
name = powerterminal
version = 0.0.5
author = Matheus Goulart
author_email = mathealgou@gmail.com
description = Simple things that python should have out of the box.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/sampleproject
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
    Author = https://matheusgoulart.info
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src